Fix: added DTO
